[package]
name = "cr_sender_receiver"
version = "0.1.1"
edition = "2021"
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]

[dependencies]
serde = { workspace = true, features=["rc"] }
rand = { workspace = true, features=["small_rng"] }
rand_chacha = { workspace = true }
nalgebra = { version="0.32" }
num = { workspace = true }
cellular_raza = { path="../../cellular_raza", features=["default"] }
plotters = { workspace = true, features = ["default", "ttf"] }
ode_integrate = "0.0.2"
rayon = "1.10.0"
kdam = { version = "0.5.1", features = ["rayon"] }
